# music-downloader

./: Cargo.toml  README.md  build.rs
data/: icons.gresource.xml  resources.gresource.xml
data/icons/hicolor/: index.theme
src/: config.rs  main.rs
src/backend/: deezer.rs  ffmpeg.rs  mod.rs  ytdlp.rs  ytdlp_setup.rs
src/backend/spotify/: api.rs  auth.rs  mod.rs  tokens.rs  types.rs
src/models/: album.rs  artist.rs  mod.rs  track.rs
src/ui/: app.rs  dl.rs  dl_row.rs  handlers.rs  mod.rs  result_row.rs  search.rs  sp.rs
src/ui/dialogs/: about.rs  ffmpeg.rs  folder.rs  logs.rs  mod.rs  popup.rs  settings.rs  sp_setup.rs  ytdlp.rs  ytdlp_update.rs
