[package]
name = "music-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
relm4 = { version = "0.9", features = ["libadwaita"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
